Add linearizability tests